AQLP-29 fixed 'When I resize the Charts and go back to the table, there is extra space' issue

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -177,7 +177,7 @@
       box-sizing: border-box;
       box-shadow: var(--react-autoql-box-shadow-1);
       &:not(.resizable) {
-        max-height: 400px;
+        max-height: 300px;
       }
       &.resizable {
         max-height: none;
